src/modules/iframe/components/generator/iframegenerator.css
.iframe__preview {
	display: flex;
	align-items: center;
	justify-content: center;
	overflow: hidden;
}
.container {
	display: flex;
	flex-direction: column;
	align-items: center;
	min-height: 100vh;
}
.iframe__code_string {
	margin-top: 0.5em;
	resize: none;
	min-height: 6em;
	position: relative;
	padding-right: 3em;
}
.iframe__copy_icon {
	position: absolute;
	right: 0.77em;
}
.iframe__input {
	margin: 0 0 0 1em !important;
	width: 10em;
}
.iframe__input input {
	text-align: right;
}
.iframe__input span {
	text-align: left;
	display: inline-block;
	min-width: 1.2em;
	position: absolute;
	top: 1em;
	right: 0.5em;
	color: var(--text2);
}
.iframe__input input:read-only {
	content: '100';
}
input[type='range']:focus {
	box-shadow: none !important;
}
.fieldset .control-label {
	top: -1rem;
}
.fieldset {
	display: flex;
}
iframe {
	border: 0;
	transition: all var(--animation-duration-medium-close) var(--animation-easing-open);
}
iframe[width='100%'] {
	width: 800px;
}
.iframe__section {
	border-bottom: 1px solid var(--header-background-color);
}
.iframe__controls {
	position: fixed;
	z-index: 999999;
	padding: 0.8em 1.5em;
	background: var(--primary-bg-color);
	box-shadow: 0px 0px 4px rgb(0 0 0 / 50%);
	transition: all var(--animation-duration-medium-close) var(--animation-easing-open);
	width: 30em;
	top: 100vh;
	margin-top: -24em;
}
.iframe__controls-section {
	display: flex;
	align-content: space-evenly;
	flex-direction: column;
}
.iframe__code {
	width: 100%;
	display: flex;
	align-items: center;
	position: relative;
}
.iframe__toggle {
	display: flex;
	flex-direction: column;
}
#iframe_slider_width:disabled {
	visibility: hidden;
}
.iframe__toggle_text {
	position: absolute;
	top: 1em;
	pointer-events: none;
	padding-left: 0.125rem;
	z-index: 1;
	color: var(--text1);
	font-size: 1rem;
	font-weight: normal;
	-webkit-transition: all 0.28s ease;
	transition: all 0.28s ease;
}
.iframe__toggle_sub-text {
	margin: 1em 0;
	width: 22.8em;
	color: var(--text2);
}
.width_placeholder {
	font-size: 1.5rem;
	margin: 0.3em 0.2em 0 1em;
	margin-left: 13.9em !important;
	min-height: 1.6em;
	padding-left: 0.1em;
	padding-top: 0.3em;
}
.width_placeholder-sub {
	top: 2.5em !important;
}
input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
	-webkit-appearance: none;
	margin: 0;
}
input[type='number'] {
	-moz-appearance: textfield;
}
.iframe__input input[type='number'] {
	font-size: 1.5rem;
	padding: 0 1.5em 0 0;
	border: 0;
}

.iframe__container {
	display: flex;
	padding-top: 1.5em;
	position: relative;
}

.iframe__container label {
	position: absolute;
	top: 0em;
}
.iframe__container-width {
	min-height: 4.6em;
}
#toggleAutoWidth {
	display: flex;
}

